2004-06-03  David Bateman  <dbateman@free.fr>

	* general/shiftdim.m: New function based on JWE code snippet.

	* general/circdim.m: New function.

2004-05-06  David Bateman  <dbateman@free.fr>

	* general/issquare.m: Fail if ndim(x) > 2.

	* linear-algebra/norm.m, linear-algebra/norm.m: Fail if ndim(x) > 2.

	* linear-alegbra/cross.m, linear-algebra/dot.m: Allow matrix and
	N-d array arguments.  Add optional dim argument to define
	dimension along which to operate.

	* linear-algebra/dmult.m: Allow N-d arrays.

	* linear-algebra/vec.m: Use v(:) and not reshape.

2004-04-29  David Bateman  <dbateman@free.fr>

	* statistics/base/ranks.m, statistics/base/run_count.m,
	statistics/base/studentize.m, statistics/base/kurtosis.m
	statistics/base/statistics.m, statistics/base/skewness.m
	statistics/base/iqr.m:
	Make N-d array aware.  Allow optional argument to define the
	dimension along which to operate.  Update the documentation.

	* statistics/base/ranks.m: Change algorithm to use sort,
	and adjust for the ties after.

	* statistics/base/run_counts.m: Change algorithm to use
	the a combination of diff and find, rather than a for-loop.

2004-04-23  Paul Kienzle  <pkienzle@users.sf.net>

	* plot/hist.m: Correctly determine cutoffs.  New tests.

2004-04-23  David Bateman  <dbateman@free.fr>

	* general/int2str.m: Treat only real part of argument, and treat
	NDArrays by stacking the slices through the matrix vertically.

	* general/num2str.m: Improve format of integer matrices, and the
	conversion of complex matrices added. Treat NDArrays by stacking
	the slices through the matrix vertically.

	* deprecated/com2str.m: Moved here from general subdirectory.

2004-04-22  John W. Eaton  <jwe@octave.org>

	* quaternion/qtransvmat.m: Use continuation characters to make
	sure result is a matrix instead of a vector.  From <aklark@atdot.it>.

2004-04-21  David Bateman  <dbateman@free.fr>

	* scripts/elfun/lcm.m: Make N-d aware.
