@@ -1,3 +1,8 @@
+2004-06-03  Paul Kienzle  <pkienzle@users.sf.net>
+
+	* plot/__errcomm__.m, plot/__errplot__.m: Simplify code and fix
+	the bug which causes __errplot__ to ignore the last argument.
+
 2004-06-03  David Bateman  <dbateman@free.fr>
 
 	* general/shiftdim.m: New function based on JWE code snippet.
